fix minimap z-index. add initial minimap transform. set cursor pointer

--- a/src/styl/responsive/mobile.styl
+++ b/src/styl/responsive/mobile.styl
@@ -6,7 +6,7 @@ $menu-width = 250px
   position: fixed
   width: $menu-width
   padding: $margin-small
-  z-index: 300
+  z-index: 200
   font-family: 'Calibre-Bold', font-stack('Helvetica')
   font-weight: 700
 
@@ -31,7 +31,7 @@ $main-content-offset = $margin-small + $margin-mid
   width: 'calc(100vw - %s)' % ($menu-width + $margin-small)
   left: $menu-width + $margin-small
   height: 100vh
-  z-index: 300
+  z-index: 200
   padding-top: $main-content-offset
   overflow-y: scroll
 
@@ -80,7 +80,7 @@ $main-content-offset = $margin-small + $margin-mid
   position: fixed
   bottom: $margin-small
   left: $margin-small
-  z-index: 200
+  z-index: 300
   border: 2px solid $color-black
 
 .minimap-row
@@ -95,14 +95,18 @@ $main-content-offset = $margin-small + $margin-mid
   justify-content: center
   align-items: center
   font-size: 10px
+  cursor: pointer
 
 #minimap-location
   width: 3vw
   height: 3vh
   position: absolute
-  top: 3vh
-  left: 3vw
+  top: 0
+  left: 0
   border: 2px solid $color-black
+  pointer-events: none
+  transform: translate(3vw, 3vh)
+  transition: transform 50ms linear
 
 // ******************************************************
 
